'Fake' animation the easy way

--- a/20210902_ToScA.tex
+++ b/20210902_ToScA.tex
@@ -204,9 +204,16 @@
 	\frametitle{Internal morphology of human teeth}
 	\begin{tikzpicture}[remember picture,overlay]%
 		\node at (current page.center) [shift={(0,-25pt)}]{%
-			\animategraphics[autoplay,loop,width=\paperwidth,every=\everyframe]{24}{./movies/tooth045/full/image0}{000}{474}
+		\animategraphics[autoplay,loop,width=\paperwidth,every=\everyframe]{24}{./movies/tooth045/full/image0}{000}{474}%
 			};%
 	\end{tikzpicture}%
+	Collaboration with \href{https://www.zmk.unibe.ch/}{zmk bern – Zahnmedizinische Kliniken}
+	\begin{itemize}
+		\item Numbers instead of just pretty images
+		\item Segmentation of teeth and root canal
+		\item (Unbiased) Characterization
+		\item Reproducible and automated image analysis (\href{https://www.python.org/}{\faPython} in \href{https://jupyter.org/}{Jupyter}~\cite{Kluyver2016})
+	\end{itemize}
 \end{frame}
 
 \begin{frame}
