Initial version for Bruker User Meeting

--- a/20211012_BrukerUserMeeting.tex
+++ b/20211012_BrukerUserMeeting.tex
@@ -6,7 +6,7 @@
 
 \title{Automated segmentation and description of the internal morphology of human permanent teeth}
 \author{David Haberthür}
-\date{September 2, 2021 | ToScA UK \& Europe 2021}
+\date{October 12, 2021 | \href{https://www.bruker.com/en/news-and-events/events/microCT_user_meeting_2021.html}{Bruker microCT User Meeting 2021}}
 
 %\includeonlyframes{current}
 %then....
@@ -108,8 +108,8 @@
 		\draw[ubGrey] (0,0) -- ++ (\progressbar@pbwd,0);
 		\draw[draw=ubRed,fill=ubGrey] (\the\dimexpr\progressbar@tmpdim-\progressbar@rcircle\relax,.5\progressbar@pbht) circle (\progressbar@rcircle);
 	\end{tikzpicture}%
-	\hfill git.io/J0tjG\xspace|\xspace%
-	v. \href{https://github.com/habi/talk.2021.Tosca/commit/\gitHash}{\gitAbbrevHash}\xspace|\xspace%
+	\hfill git.io/JznTU\xspace|\xspace%
+	v. \href{https://github.com/habi/Talk.2021.Micro-CTUsersMeeting/commit/\gitHash}{\gitAbbrevHash}\xspace|\xspace%
 	p.\xspace\insertframenumber/\inserttotalframenumber%
 	\hspace*{4ex}%
 	\vspace{0.5ex}%
