No more `label=current`

--- a/20211012_BrukerUserMeeting.tex
+++ b/20211012_BrukerUserMeeting.tex
@@ -350,7 +350,7 @@
 		}%
 \end{frame}
 
-\begin{frame}[label=current, shrink=20]
+\begin{frame}[shrink=20]
 	\frametitle{Outcome root canal configuration classification}%
 	\centering%
 	\begin{table}[]%
@@ -412,15 +412,16 @@
 	\end{tikzpicture}%
 \end{frame}
 
-\begin{frame}[label=current]
+\begin{frame}
 	\frametitle{Outcome of root canal space extraction}%
 	\renewcommand{\imheight}{\paperheight}%
 	\begin{tikzpicture}[remember picture,overlay]%
 		\node at (current page.center) {%
 		\includegraphics[height=\imheight]{./images/rcs/Tooth0278}%
 		\includegraphics[height=\imheight]{./images/rcs/Tooth0352}%
-		\includegraphics[height=\imheight]{./images/rcs/Tooth0411}%
-		\includegraphics[height=\imheight]{./images/rcs/Tooth0642}%
+		\includegraphics[height=\imheight]{./images/rcs/Tooth0419}%
+		\includegraphics[height=\imheight]{./images/rcs/Tooth0452}%
+		%\includegraphics[height=\imheight]{./images/rcs/Tooth0642}%
 		\includegraphics[height=\imheight]{./images/rcs/Tooth0931}%
 			};%
 		\end{tikzpicture}%
@@ -441,7 +442,7 @@
 		}%
 \end{frame}
 
-\begin{frame}[label=current]
+\begin{frame}
 	\frametitle{Outcome of foramen geometry analysis}
 	\centering
 	\begin{table}[]
