Fiddle with second table

--- a/20211012_BrukerUserMeeting.tex
+++ b/20211012_BrukerUserMeeting.tex
@@ -455,17 +455,17 @@
 	\begin{table}[]
 		\begin{tabular}{cSSSSSSSS}
 		\toprule
-		\# of Foramina & \multicolumn{2}{c}{1} & \multicolumn{2}{c}{2} & \multicolumn{2}{c}{3} & \multicolumn{2}{l}{4} \\
-          & \#  & \%   & \#  & \%    & \# & \%    & \# & \%    \\
-\midrule
-Oval      & 72 & 91.1 & 16 & 100.0 & 1 & 100.0 & 2 & 100.0 \\
-Round     & 6  & 7.6  &    &       &   &       &   &    \\
-Irregular & 1  & 1.3  &    &       &   &       &   &    \\
-\midrule
-N         & 79 &      & 16 &       & 1 &       & 2 &\\
-\bottomrule
-\end{tabular}
-\end{table}
+		& \multicolumn{2}{c}{1 Foramen} & \multicolumn{2}{c}{2 Foramina} & \multicolumn{2}{c}{3 Foramina} & \multicolumn{2}{c}{4 Foramina} \\
+		& \#  & \%   & \#  & \%    & \# & \%    & \# & \%    \\
+		\midrule
+		Oval		& 72 & 91.1 & 16 & 100.0 & 1 & 100.0 & 2 & 100.0 \\
+		Round	&  6 &  7.6  &    &       &   &       &   &    \\
+		Irregular	&  1 &  1.3  &    &       &   &       &   &    \\
+		\midrule
+		N		& 79 &      & 16 &       & 1 &       & 2 &\\
+		\bottomrule
+		\end{tabular}
+	\end{table}
 \end{frame}
 
 \begin{frame}
