Final yak shaving

--- a/20211012_BrukerUserMeeting.tex
+++ b/20211012_BrukerUserMeeting.tex
@@ -367,19 +367,19 @@
 			\multicolumn{2}{c}{Roots} & RCC & \# & \%\\%
 			\midrule%
 			\multicolumn{2}{c}{\multirow{9}{*}{Single (N=98)}} & 1-1-1/1 & 73 & 74.5\\%
-			\multicolumn{2}{l}{}        & 1-1-1/2 & 14       & 14.3 \\%
-			\multicolumn{2}{l}{}        & 1-1-1/3 & 1        & 1.0  \\%
-			\multicolumn{2}{l}{}        & 1-1-1/4 & 2        & 2.1  \\%
-			\multicolumn{2}{l}{}        & 1-1-2/1 & 1        & 1.0  \\%
-			\multicolumn{2}{l}{}        & 1-2-1/1 & 4        & 4.1  \\%
-			\multicolumn{2}{l}{}        & 1-2-1/2 & 1        & 1.0  \\%
-			\multicolumn{2}{l}{}        & 1-2-2/2 & 1        & 1.0  \\%
-			\multicolumn{2}{l}{}        & 2-3-1/1 & 1        & 1.0  \\%
+			\multicolumn{2}{l}{}							   & 1-1-1/2 & 14 & 14.3\\%
+			\multicolumn{2}{l}{}							   & 1-1-1/3 &  1 &  1.0\\%
+			\multicolumn{2}{l}{}							   & 1-1-1/4 &  2 &  2.1\\%
+			\multicolumn{2}{l}{}							   & 1-1-2/1 &  1 &  1.0\\%
+			\multicolumn{2}{l}{}							   & 1-2-1/1 &  4 &  4.1\\%
+			\multicolumn{2}{l}{}							   & 1-2-1/2 &  1 &  1.0\\%
+			\multicolumn{2}{l}{}							   & 1-2-2/2 &  1 &  1.0\\%
+			\multicolumn{2}{l}{}							   & 2-3-1/1 &  1 &  1.0\\%
 			\midrule%
-			\multirow{4}{*}{Double (N=3)} & \multirow{2}{*}{Buccal} & 1-1-1/1 & 2            & 66.6 \\%
-			&                          & 1-2-1/1 & 1        & 33.3 \\%
-			& \multirow{2}{*}{Lingual} & 1-1-1/1 & 2        & 66.6 \\%
-			&                          & 1-1-1/2 & 1        & 33.3\\%
+			\multirow{4}{*}{Double (N=3)}	& \multirow{2}{*}{Buccal}	& 1-1-1/1 & 2 & 66.6\\%
+											&							& 1-2-1/1 & 1 & 33.3\\%
+											& \multirow{2}{*}{Lingual}	& 1-1-1/1 & 2 & 66.6\\%
+											&							& 1-1-1/2 & 1 & 33.3\\%
 			\bottomrule%
 		\end{tabular}%
 		}%
@@ -388,20 +388,20 @@
 			\toprule%
 			\multicolumn{2}{c}{Roots} & RCC & \# & \%\\%
 			\midrule%
-			\rowcolor{ubRed}\multicolumn{2}{c}{\multirow{9}{*}{Single (N=98)}} & 1-1-1/1 & 73 & 74.5\\%
-			\rowcolor{ubRed}\multicolumn{2}{l}{}        & 1-1-1/2 & 14       & 14.3 \\%
-			\multicolumn{2}{l}{}        & 1-1-1/3 & 1        & 1.0  \\%
-			\rowcolor{ubRed}\multicolumn{2}{l}{}        & 1-1-1/4 & 2        & 2.1  \\%
-			\multicolumn{2}{l}{}        & 1-1-2/1 & 1        & 1.0  \\%
-			\rowcolor{ubRed}\multicolumn{2}{l}{}        & 1-2-1/1 & 4        & 4.1  \\%
-			\multicolumn{2}{l}{}        & 1-2-1/2 & 1        & 1.0  \\%
-			\multicolumn{2}{l}{}        & 1-2-2/2 & 1        & 1.0  \\%
-			\multicolumn{2}{l}{}        & 2-3-1/1 & 1        & 1.0  \\%
+			\rowcolor{ubRed}\multicolumn{2}{c}{\multirow{9}{*}{Single (N=98)}}	& 1-1-1/1 & 73 & 74.5\\%
+			\rowcolor{ubRed}\multicolumn{2}{l}{}								& 1-1-1/2 & 14 & 14.3\\%
+			\multicolumn{2}{l}{}												& 1-1-1/3 &  1 &  1.0\\%
+			\rowcolor{ubRed}\multicolumn{2}{l}{}								& 1-1-1/4 &  2 &  2.1\\%
+			\multicolumn{2}{l}{}												& 1-1-2/1 &  1 &  1.0\\%
+			\rowcolor{ubRed}\multicolumn{2}{l}{}								& 1-2-1/1 &  4 &  4.1\\%
+			\multicolumn{2}{l}{}												& 1-2-1/2 &  1 &  1.0\\%
+			\multicolumn{2}{l}{}												& 1-2-2/2 &  1 &  1.0\\%
+			\multicolumn{2}{l}{}												& 2-3-1/1 &  1 &  1.0\\%
 			\midrule%
-			\multirow{4}{*}{Double (N=3)} & \multirow{2}{*}{Buccal} & 1-1-1/1 & 2            & 66.6 \\%
-			&                          & 1-2-1/1 & 1        & 33.3 \\%
-			& \multirow{2}{*}{Lingual} & 1-1-1/1 & 2        & 66.6 \\%
-			&                          & 1-1-1/2 & 1        & 33.3\\%
+			\multirow{4}{*}{Double (N=3)} & \multirow{2}{*}{Buccal}				& 1-1-1/1 &  2 & 66.6\\%
+										  &										& 1-2-1/1 &  1 & 33.3\\%
+										  & \multirow{2}{*}{Lingual}			& 1-1-1/1 &  2 & 66.6\\%
+										  &										& 1-1-1/2 &  1 & 33.3\\%
 			\bottomrule%
 		\end{tabular}%
 		}%
@@ -421,17 +421,14 @@
 
 \begin{frame}
 	\frametitle{Outcome of root canal space extraction}%
-	\renewcommand{\imheight}{\paperheight}%
-	\begin{tikzpicture}[remember picture,overlay]%
-		\node at (current page.center) {%
+	\renewcommand{\imheight}{0.618\paperheight}%
+		\includegraphics[height=\imheight]{./images/rcs/Tooth0452}%	
 		\includegraphics[height=\imheight]{./images/rcs/Tooth0278}%
-		\includegraphics[height=\imheight]{./images/rcs/Tooth0352}%
+		\includegraphics[height=\imheight]{./images/rcs/Tooth0353}%
 		\includegraphics[height=\imheight]{./images/rcs/Tooth0419}%
-		\includegraphics[height=\imheight]{./images/rcs/Tooth0452}%
-		%\includegraphics[height=\imheight]{./images/rcs/Tooth0642}%
+		\includegraphics[height=\imheight]{./images/rcs/Tooth0642}%
+		\includegraphics[height=\imheight]{./images/rcs/Tooth0752}%
 		\includegraphics[height=\imheight]{./images/rcs/Tooth0931}%
-			};%
-		\end{tikzpicture}%
 \end{frame}
 
 \begin{frame}
@@ -455,14 +452,14 @@
 	\begin{table}[]
 		\begin{tabular}{cSSSSSSSS}
 		\toprule
-		& \multicolumn{2}{c}{1 Foramen} & \multicolumn{2}{c}{2 Foramina} & \multicolumn{2}{c}{3 Foramina} & \multicolumn{2}{c}{4 Foramina} \\
-		& \#  & \%   & \#  & \%    & \# & \%    & \# & \%    \\
+		& \multicolumn{2}{c}{1 Foramen} & \multicolumn{2}{c}{2 Foramina} & \multicolumn{2}{c}{3 Foramina} & \multicolumn{2}{c}{4 Foramina}\\
+		& \#  & \% & \# & \% & \# & \% & \# & \%\\
 		\midrule
-		Oval		& 72 & 91.1 & 16 & 100.0 & 1 & 100.0 & 2 & 100.0 \\
-		Round	&  6 &  7.6  &    &       &   &       &   &    \\
-		Irregular	&  1 &  1.3  &    &       &   &       &   &    \\
+		Oval		& 72 & 91.1 & 16 & 100.0 & 1 & 100.0 & 2 & 100.0\\
+		Round		&  6 &  7.6 &    &       &   &       &   &\\
+		Irregular	&  1 &  1.3 &    &       &   &       &   &\\
 		\midrule
-		N		& 79 &      & 16 &       & 1 &       & 2 &\\
+		N			& 79 &      & 16 &       & 1 &       & 2 &\\
 		\bottomrule
 		\end{tabular}
 	\end{table}
